Flower tab and translations